fix: align context menu with cursor position

--- a/src/renderer/styles/app/partials/layout.less
+++ b/src/renderer/styles/app/partials/layout.less
@@ -677,7 +677,7 @@ html, body {
 }
 .torrent.context.menu {
     display: none;
-    position: absolute;
+    position: fixed;
 }
 .torrent.context.menu .ui.vertical.menu {
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.15);
